[gd_scene load_steps=6 format=3 uid="uid://c3hs75bp6il0d"]

[ext_resource type="Script" path="res://main.gd" id="1_2tlpq"]
[ext_resource type="PackedScene" uid="uid://8nyn2h4kr1as" path="res://mob.tscn" id="2_ndrgu"]
[ext_resource type="PackedScene" uid="uid://cphn35p0ep5rf" path="res://player.tscn" id="3_smbpx"]
[ext_resource type="PackedScene" uid="uid://blvp2nx0g7qpq" path="res://hud.tscn" id="3_utuui"]

[sub_resource type="Curve2D" id="Curve2D_ure1e"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 640, 360, 0, 0, 0, 0, 640, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_2tlpq")
mob_scene = ExtResource("2_ndrgu")

[node name="Player" parent="." instance=ExtResource("3_smbpx")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(320, 576)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ure1e")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("3_utuui")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
